--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -537,9 +537,7 @@ input:focus, button:focus-visible, select:focus {
     transform: translateY(-100vh) translateX(20px);
     opacity: 0;
   }
-}
-
-.particle {
+}.particle {
   position: absolute;
   width: 2px;
   height: 2px;
